Simplify usecases