@@ -2,16 +2,13 @@ package com.jrobertgardzinski.email.policy;
 
 import com.jrobertgardzinski.email.domain.Email;
 import com.jrobertgardzinski.email.external.MxRecordPort;
-import com.jrobertgardzinski.util.constraint.ConstraintResult;
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.Then;
 import io.cucumber.java.en.When;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.TimeUnit;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -22,10 +19,8 @@ public class EmailPolicySteps {
     private final Set<String> blockedDomains = new HashSet<>();
     private final Set<String> companyDomains = new HashSet<>();
     private final Set<String> noMxDomains = new HashSet<>();
-    private final java.util.List<ConstraintResult> capturedWarnings = new ArrayList<>();
-    private CountDownLatch warningLatch;
-    private RegistrationDecision registrationDecision;
-    private PasswordResetDecision passwordResetDecision;
+    private CanRegister.Decision registrationDecision;
+    private CanResetPassword.Decision passwordResetDecision;
 
     @Given("a valid email {string}")
     public void aValidEmail(String raw) {
@@ -65,72 +60,53 @@ public class EmailPolicySteps {
 
     @When("registration eligibility is evaluated")
     public void registrationEligibilityIsEvaluated() {
-        CanRegister.create(Set.of(), Set.of(), Set.of(), e -> true)
-                .evaluate(email, event -> {
-                    if (event instanceof PolicyEvent.Outcome<?> d)
-                        registrationDecision = (RegistrationDecision) d.value();
-                });
+        registrationDecision = new CanRegister(Set.of(), Set.of(), Set.of(), e -> true)
+                .evaluate(email);
     }
 
     @When("registration eligibility is evaluated with active constraints")
     public void registrationEligibilityIsEvaluatedWithActiveConstraints() {
         MxRecordPort mxPort = e -> !noMxDomains.contains(e.domain().value());
-        if (!noMxDomains.isEmpty()) warningLatch = new CountDownLatch(1);
-
-        CanRegister.create(disposableDomains, blockedDomains, companyDomains, mxPort)
-                .evaluate(email, event -> {
-                    if (event instanceof PolicyEvent.Outcome<?> d)
-                        registrationDecision = (RegistrationDecision) d.value();
-                    if (event instanceof PolicyEvent.Warning<?> w) {
-                        capturedWarnings.add(w.result());
-                        if (warningLatch != null) warningLatch.countDown();
-                    }
-                });
+        registrationDecision = new CanRegister(disposableDomains, blockedDomains, companyDomains, mxPort)
+                .evaluate(email);
     }
 
     @When("password reset eligibility is evaluated")
     public void passwordResetEligibilityIsEvaluated() {
-        CanResetPassword.create(Set.of())
-                .evaluate(email, event -> {
-                    if (event instanceof PolicyEvent.Outcome<?> d)
-                        passwordResetDecision = (PasswordResetDecision) d.value();
-                });
+        passwordResetDecision = new CanResetPassword(Collections.emptySet()).evaluate(email);
     }
 
     @When("password reset eligibility is evaluated with extended checks")
     public void passwordResetEligibilityIsEvaluatedWithExtendedChecks() {
-        CanResetPassword.create(blockedDomains)
-                .evaluate(email, event -> {
-                    if (event instanceof PolicyEvent.Outcome<?> d)
-                        passwordResetDecision = (PasswordResetDecision) d.value();
-                });
+        passwordResetDecision = new CanResetPassword(blockedDomains).evaluate(email);
     }
 
     @Then("registration is allowed")
     public void registrationIsAllowed() {
-        assertTrue(registrationDecision.isAllowed());
+        assertTrue(registrationDecision instanceof CanRegister.Decision.Allowed
+                || registrationDecision instanceof CanRegister.Decision.AllowedWithWarning);
     }
 
     @Then("registration is rejected with violation {string}")
     public void registrationIsRejectedWithViolation(String code) {
-        assertTrue(registrationDecision.isRejected());
-        assertTrue(registrationDecision.violations().stream().anyMatch(v -> v.code().equals(code)));
+        assertInstanceOf(CanRegister.Decision.Rejected.class, registrationDecision);
+        assertTrue(((CanRegister.Decision.Rejected) registrationDecision).errorCodes().contains(code));
     }
 
     @Then("a warning {string} is raised")
-    public void aWarningIsRaised(String code) throws InterruptedException {
-        assertTrue(warningLatch.await(5, TimeUnit.SECONDS), "Warning handler was not called within timeout");
-        assertTrue(capturedWarnings.stream().anyMatch(w -> w.code().equals(code)));
+    public void aWarningIsRaised(String code) {
+        assertInstanceOf(CanRegister.Decision.AllowedWithWarning.class, registrationDecision);
+        assertEquals(code, ((CanRegister.Decision.AllowedWithWarning) registrationDecision).code());
     }
 
     @Then("password reset is allowed")
     public void passwordResetIsAllowed() {
-        assertTrue(passwordResetDecision.isAllowed());
+        assertInstanceOf(CanResetPassword.Decision.Allowed.class, passwordResetDecision);
     }
 
     @Then("password reset is rejected with violation {string}")
     public void passwordResetIsRejectedWithViolation(String code) {
-        assertTrue(passwordResetDecision.isRejected());
-        assertTrue(passwordResetDecision.violations().stream().anyMatch(v -> v.code().equals(code)));
+        assertInstanceOf(CanResetPassword.Decision.Rejected.class, passwordResetDecision);
+        assertTrue(((CanResetPassword.Decision.Rejected) passwordResetDecision).errorCodes().contains(code));
     }
 }
